# tantivy-datafusion

./: AGENTS.md  Cargo.toml  ESCompatDF.md  ESCompatDFImplementationPlan.md  ESCompatDFNoMetadata.md  EsCompatDFProblemStatement.MD  NestedApproxAggFixPlan.md  NestedTopKAgg.MD  README.md  TODO.MD  schema_management.md  split_planning.MD
benches/: agg_bench.rs
docs/performance/: aggregation-pushdown.md
docs/planning/: README.md  multi-split.md  runtime-alignment.md  split-planning.md  todo.md
docs/reviews/: bench-first-review.md
reviews/: bench-first-review.md
src/: codec.rs  fast_field_reader.rs  full_text_udf.rs  lib.rs  split_runtime.rs  sync_exec.rs  type_coercion.rs  util.rs
src/unified/: agg_data_source.rs  agg_exec.rs  agg_pushdown.rs  mod.rs  plan_traversal.rs  single_table_provider.rs  tantivy_agg_data_source.rs  tantivy_table_provider.rs
tests/: agg_correctness.rs  codec_roundtrip.rs  edge_cases.rs  filter_and_schema.rs  multi_split.rs  tantivy_table.rs  unified_pushdowns.rs
