[package]
name = "tantivy-datafusion"
version = "0.1.0"
edition = "2021"
description = "DataFusion integration for tantivy search indices"
license = "MIT"

[dependencies]
tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "1e859fd", features = ["quickwit", "zstd-compression"] }
datafusion = "53"
datafusion-datasource = "53"
datafusion-physical-plan = "53"
datafusion-physical-expr = "53"
datafusion-physical-optimizer = "53"
datafusion-expr-common = "53"
datafusion-proto = "53"
arrow = { version = "58", features = ["prettyprint"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt"] }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
binggan = "0.14.2"
rand = "0.9"
rand_distr = "0.5"

[[bench]]
name = "agg_bench"
harness = false
